--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,6 +12,10 @@ environment:
     python_version: 3.9.0
   - python: 39-x64
     python_version: 3.9.0
+  - python: 310
+    python_version: 3.10.0
+  - python: 310-x64
+    python_version: 3.10.0
 
 install:
   - ps: |
