--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ matrix:
   - python: 3.9
     dist: xenial
     sudo: required
+  - python: 3.10
+    dist: xenial
+    sudo: required
 env:
   global:
   - CFLAGS=-coverage
